<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
>
    <EditText
        android:id="@+id/field_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/field_last_name"
        android:layout_alignLeft="@+id/field_first_name"
        android:layout_alignStart="@+id/field_first_name"
        android:layout_marginTop="14dp" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/field_email"
        android:layout_alignLeft="@+id/field_email"
        android:layout_alignStart="@+id/field_email" />

    <EditText
        android:id="@+id/field_password_confirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:layout_below="@+id/field_password"
        android:layout_toRightOf="@+id/status"
        android:layout_toEndOf="@+id/status"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/field_first_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/field_last_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_below="@+id/field_first_name"
        android:layout_toRightOf="@+id/status"
        android:layout_toEndOf="@+id/status"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/field_password"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/field_password"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/email_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_above="@+id/status"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="204dp"
        android:ems="10"
        android:inputType="number"
        android:hint="Height"
        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:inputType="number"
        android:hint="Weight"
        />

</android.widget.RelativeLayout>